# claude-pty-controller

./: .gitignore  Cargo.toml  README.md  方案6-Rust版.md
dashboard/: README.md  chacha20poly1305.mjs  chacha20poly1305.test.mjs  cli.mjs  index.html  interop-test.sh  noise-web.mjs  noise.mjs
deploy/: claude-pty-controller.env.example  claude-pty-controller.service
docs/: ARCHITECTURE.md  PROTOCOL.md  REVIEW.md
src/: config.rs  e2ee.rs  lib.rs  main.rs  proto.rs  relay_client.rs  relay_proto.rs  session.rs  singleton.rs  watchdog.rs  ws.rs
src/adapter/: claude.rs  mod.rs
src/channels/: mod.rs  osc.rs  output.rs  transcript.rs
src/pty/: mod.rs  tmux.rs
tests/: controller_e2ee.rs  relay_e2ee.rs
